# fastAPI_study

./: FastAPI정리.md  FastAPI정리 2 .md  conftest.py  pyproject.toml  test.sh
.github/workflows/: ci.yaml
app/apis/v1/: meeting_router.py
app/configs/: base_config.py
app/queries/meeting/: create_meeting_async_edgeql.py  get_meeting_by_url_code_async_edgeql.py
app/quries/meeting/: create_meeting_async_edgeql.py
app/tests/apis/v1/: test_meeting_router_edgedb.py  test_meeting_router_mysql.py
app/tortoise_models/: meeting.py
dbschema/: default.esdl
dbschema/migrations/: 00004-m1radfp.edgeql  00005-m1vmcfo.edgeql
migrations/models/: 1_20250827151211_update.py
